force-app/main/default/objects/Accessories_Master__c/Accessories_Master__c.object-meta.xml
<CustomObject>
    <description>To list down the list of different Accessories for MF</description>
    <label>Accessories Master</label>
    <nameField>
        <displayFormat>AM-{0000000000}</displayFormat>
        <label>Accessories Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accessories Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>