force-app/main/default/objects/Accessories_Master__c/fields/AccessoriesGroup__c.field-meta.xml
<CustomField>
    <fullName>AccessoriesGroup__c</fullName>
    <formula>CASE
(ACM_MNM_MAJGROUPCD__c, 
    &quot;OTHERS_ACC&quot;, &quot;ADDITIONAL ACCESSORIES&quot;, 
    &quot;INS_CREDIT&quot;, &quot;INSURANCE&quot;,
    &quot;MISC&quot;,&quot;PROMOTIONS &amp; DISCOUNTS&quot;,
    &quot;COEUP&quot;,&quot;LTA &amp; COE&quot;,  
    &quot;AIR_CON&quot;,&quot;MAIN ACCESSORIES&quot;,  
    &quot;FREE_ACC&quot;,&quot;MAIN ACCESSORIES&quot;,  
    &quot;LEA_SEAT&quot;,&quot;MAIN ACCESSORIES&quot;,  
    &quot;SPORT_RIMS&quot;,&quot;MAIN ACCESSORIES&quot;,
    &quot;RADIO&quot;,&quot;MAIN ACCESSORIES&quot;,  
    &quot;PROMODISC&quot;,&quot;PROMOTIONS &amp; DISCOUNTS&quot;,  
    &quot;PROMO&quot;,&quot;PROMOTIONS &amp; DISCOUNTS&quot;, 
    &quot;PROMOSUBSI&quot;,&quot;PROMOTIONS &amp; DISCOUNTS&quot;,
    &quot;SVC_CREDIT&quot;, &quot;SERVICE&quot;,
    &quot;SVC CREDIT&quot;, &quot;SERVICE&quot;,
    &quot;PACKAGE&quot;, &quot;PROMOTIONS &amp; DISCOUNTS&quot;,
    &quot;WARRANTY&quot;, &quot;WARRANTY&quot;,
    &quot;PICKUP_DEL&quot;,&quot;ADDITIONAL ACCESSORIES&quot;, 
    &quot;SERVICINGS&quot;, &quot;ADDITIONAL ACCESSORIES&quot;, 
    &quot;NA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accessories Group</label>
    <type>Text</type>
</CustomField>