force-app/main/default/objects/Accessories_Master__c/fields/AccsRateMaster__c.field-meta.xml
<CustomField>
    <fullName>AccsRateMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accs Rate Master</label>
    <referenceTo>Accs_Rate_Master__c</referenceTo>
    <relationshipLabel>Accessories Master</relationshipLabel>
    <relationshipName>Accessories_Master</relationshipName>
    <type>Lookup</type>
</CustomField>