force-app/main/default/objects/Accessories_Master__c/fields/ACM_ACCSCD__c.field-meta.xml
<CustomField>
    <fullName>ACM_ACCSCD__c</fullName>
    <externalId>true</externalId>
    <label>Accs Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>