force-app/main/default/objects/Accessories_Master__c/fields/ACM_ACCSCOST__c.field-meta.xml
<CustomField>
    <fullName>ACM_ACCSCOST__c</fullName>
    <label>Accs Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>