force-app/main/default/objects/Accessories_Master__c/fields/ACM_ACCSDESC__c.field-meta.xml
<CustomField>
    <fullName>ACM_ACCSDESC__c</fullName>
    <label>Accs Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>