force-app/main/default/objects/Accessories_Master__c/fields/ACM_ACCSTYPE__c.field-meta.xml
<CustomField>
    <fullName>ACM_ACCSTYPE__c</fullName>
    <label>Accounts Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>