force-app/main/default/objects/Accessories_Master__c/fields/ACM_BRM_UNIQUEBRCD__c.field-meta.xml
<CustomField>
    <fullName>ACM_BRM_UNIQUEBRCD__c</fullName>
    <label>Unique Branch Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>