force-app/main/default/objects/Accessories_Master__c/fields/ACM_CASHREBATE__c.field-meta.xml
<CustomField>
    <fullName>ACM_CASHREBATE__c</fullName>
    <label>Cash Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>