force-app/main/default/objects/Accessories_Master__c/fields/ACM_CONVRATE__c.field-meta.xml
<CustomField>
    <fullName>ACM_CONVRATE__c</fullName>
    <label>Conversion Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>