force-app/main/default/objects/Accessories_Master__c/fields/ACM_DEALERTRADECOST__c.field-meta.xml
<CustomField>
    <fullName>ACM_DEALERTRADECOST__c</fullName>
    <label>Dealer Trade Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>