force-app/main/default/objects/Accessories_Master__c/fields/ACM_FRN_FRNCD__c.field-meta.xml
<CustomField>
    <fullName>ACM_FRN_FRNCD__c</fullName>
    <label>Franchise Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>