force-app/main/default/objects/Accessories_Master__c/fields/ACM_LASTUPDBY__c.field-meta.xml
<CustomField>
    <fullName>ACM_LASTUPDBY__c</fullName>
    <label>ACM_LASTUPDBY</label>
    <length>20</length>
    <type>Text</type>
</CustomField>