force-app/main/default/objects/Accessories_Master__c/fields/ACM_LASTUPDDT__c.field-meta.xml
<CustomField>
    <fullName>ACM_LASTUPDDT__c</fullName>
    <label>ACM_LASTUPDDT</label>
    <type>DateTime</type>
</CustomField>