force-app/main/default/objects/Accessories_Master__c/fields/ACM_LEADTIME__c.field-meta.xml
<CustomField>
    <fullName>ACM_LEADTIME__c</fullName>
    <label>Lead Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>