force-app/main/default/objects/Accessories_Master__c/fields/ACM_PARTS__c.field-meta.xml
<CustomField>
    <fullName>ACM_PARTS__c</fullName>
    <label>Parts</label>
    <length>1</length>
    <type>Text</type>
</CustomField>