force-app/main/default/objects/Accessories_Master__c/fields/ACM_PURPRICE__c.field-meta.xml
<CustomField>
    <fullName>ACM_PURPRICE__c</fullName>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>