force-app/main/default/objects/Accessories_Master__c/fields/ACM_STM_GSTCD__c.field-meta.xml
<CustomField>
    <fullName>ACM_STM_GSTCD__c</fullName>
    <label>GST Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>