force-app/main/default/objects/Accessories_Master__c/fields/ACM_TRADABLE__c.field-meta.xml
<CustomField>
    <fullName>ACM_TRADABLE__c</fullName>
    <label>Tradable</label>
    <length>1</length>
    <type>Text</type>
</CustomField>