force-app/main/default/objects/Accessories_Master__c/fields/ACM_UOM_UOMCD__c.field-meta.xml
<CustomField>
    <fullName>ACM_UOM_UOMCD__c</fullName>
    <label>UOM Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>