force-app/main/default/objects/Accessories_Master__c/fields/ACMCANREMOVEINEDIT__c.field-meta.xml
<CustomField>
    <fullName>ACMCANREMOVEINEDIT__c</fullName>
    <label>ACM_CANREMOVEINEDIT</label>
    <length>1</length>
    <type>Text</type>
</CustomField>