force-app/main/default/objects/Accessories_Master__c/fields/ACMDLRCOMMAMT__c.field-meta.xml
<CustomField>
    <fullName>ACMDLRCOMMAMT__c</fullName>
    <label>ACM_DLRCOMMAMT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>