force-app/main/default/objects/Accessories_Master__c/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <formula>CASE
( ACM_FRN_FRNCD__c,
&quot;MITPC&quot;,&quot;CCA&quot;,
&quot;MITCV&quot;,&quot;CCA&quot;,
&quot;MBP&quot;,&quot;CCI&quot;,
&quot;MBC&quot;,&quot;CCI&quot;,
&quot;KIAPC&quot;,&quot;CCK&quot;,
&quot;MBT&quot;,&quot;CCI&quot;,
&quot;CNC&quot;,&quot;CNC&quot;,
&quot;CITPC&quot;,&quot;CCF&quot;,
&quot;CITCV&quot;,&quot;CCF&quot;,
&quot;KIACV&quot;,&quot;CCK&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branch Code</label>
    <type>Text</type>
</CustomField>