force-app/main/default/objects/Accessories_Master__c/fields/Latest_Accessories_Rate_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Latest_Accessories_Rate_Sale_Price__c</fullName>
    <label>Latest Accessories Rate Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>