force-app/main/default/objects/Accessories_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ACM_ACCSCD__c</columns>
    <columns>ACM_ACCSDESC__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>BranchCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACM_ACCSCD__c</field>
        <operation>contains</operation>
        <value>GMS54500</value>
    </filters>
    <label>All</label>
</ListView>